# smartlifeguide.github.io

./: .gitignore  CLAUDE.md  PLAN.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: generate.yml
data/: a8_programs.json  keywords.json  niches.json  published.json
pipeline/: affiliate_linker.py  article_generator.py  config.py  image_fetcher.py  internal_linker.py  keyword_researcher.py  main.py  product_searcher.py  publisher.py
scripts/: add_product_links.py
site/: hugo.toml
site/content/en/: _index.md  about.md  activities-for-elderly-parents-home.md  affordable-family-cell-phone-plans-comparison.md  aging-in-place-home-modifications.md  best-529-plan-investment-options.md  best-air-purifier-for-allergies-2025.md  best-air-purifier-for-allergies-2026.md  best-air-purifier-for-allergies-amazon.md  best-air-purifier-for-allergies-and-asthma.md  best-air-purifier-for-allergies-and-dust.md  best-air-purifier-for-allergies-and-mold.md  best-air-purifier-for-allergies-and-pet-hair.md  best-air-purifier-for-allergies-and-pets-reddit.md  best-air-purifier-for-allergies-and-pets.md  best-air-purifier-for-allergies-and-smoke.md  best-air-purifier-for-allergies-bedroom.md  best-air-purifier-for-allergies-consumer-reports.md  best-air-purifier-for-allergies-costco.md  best-air-purifier-for-allergies-for-large-rooms.md  best-air-purifier-for-allergies-hepa.md  best-air-purifier-for-allergies-reddit.md  best-air-purifier-for-allergies-under-100.md  best-air-purifier-for-allergies-with-hepa-filter.md  best-air-purifier-for-allergies.md  (+348 more)
(+332 files in other folders)
